--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-I am a visualjerk
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>visualjerk</title>
+  <meta name="description" content="Web-Developer and Vue-Lover.">
+  <meta name="author" content="visualjerk">
+
+  <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
+
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body>
+<div class="wrapper">
+  <div class="logo">
+    <img src="assets/img/logo_visualjerk.svg"
+      onerror="this.src='assets/img/logo_visualjerk.png'">
+  </div>
+  <h1>Web-Developer and Vue-Lover.</h1>
+</div>
+</body>
+</html>
